// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots COMPONENTS|Controls/Buttons Button as <a href="" /> 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c1 {
  font-family: inherit;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  display: inline-block;
  color: #ffffff;
  background: #38afff;
  font-size: 18px;
  line-height: 18px;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  border-radius: 6px;
  padding: 6.0px;
  padding-right: 15px;
  padding-left: 15px;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: opacity,box-shadow;
  transition-property: opacity,box-shadow;
}

.c1 .icon-inherit-color {
  fill: #ffffff;
}

.c1:hover,
.c1:focus {
  cursor: pointer;
  background: #0f99f5;
  box-shadow: 0 0 0 1px #0f99f5;
  -webkit-transition: none;
  transition: none;
}

.c1:active {
  background: #008ae6;
  box-shadow: none;
}

.c2 {
  display: inline-block;
  vertical-align: top;
  padding: 0 0px 0 0px;
}

@media screen and (max-width:1199px) {
  .responsive .c1,
  .responsive-booking .c1 {
    max-width: 340px;
  }
}

<div
  className="responsive c0"
>
  <a
    className="-a c1"
    disabled={false}
    href="/"
    size="normal"
    target="_blank"
  >
    <span
      className="c2"
      size="normal"
    >
      Авиабилеты
    </span>
  </a>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Buttons Default 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c1 {
  font-family: inherit;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  display: inline-block;
  color: #ffffff;
  background: #38afff;
  font-size: 18px;
  line-height: 18px;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  border-radius: 6px;
  padding: 6.0px;
  padding-right: 15px;
  padding-left: 15px;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: opacity,box-shadow;
  transition-property: opacity,box-shadow;
}

.c1 .icon-inherit-color {
  fill: #ffffff;
}

.c1:hover,
.c1:focus {
  cursor: pointer;
  background: #0f99f5;
  box-shadow: 0 0 0 1px #0f99f5;
  -webkit-transition: none;
  transition: none;
}

.c1:active {
  background: #008ae6;
  box-shadow: none;
}

.c2 {
  display: inline-block;
  vertical-align: top;
  padding: 0 0px 0 0px;
}

@media screen and (max-width:1199px) {
  .responsive .c1,
  .responsive-booking .c1 {
    max-width: 340px;
  }
}

<div
  className="responsive c0"
>
  <button
    className="c1"
    disabled={false}
    size="normal"
  >
    <span
      className="c2"
      size="normal"
    >
      Авиабилеты
    </span>
  </button>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Buttons Icon-only button (custom icon) 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c4 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: fill,-webkit-transform;
  -webkit-transition-property: fill,transform;
  transition-property: fill,transform;
  height: 18px;
  width: 18px;
  fill: transparent;
  opacity: 1;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  font-family: inherit;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  display: inline-block;
  color: #ffffff;
  background: #38afff;
  font-size: 20px;
  line-height: 20px;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  border-radius: 6px;
  padding: 11.0px;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: opacity,box-shadow;
  transition-property: opacity,box-shadow;
}

.c1 .icon-inherit-color {
  fill: #ffffff;
}

.c1:hover,
.c1:focus {
  cursor: pointer;
  background: #0f99f5;
  box-shadow: 0 0 0 1px #0f99f5;
  -webkit-transition: none;
  transition: none;
}

.c1:active {
  background: #008ae6;
  box-shadow: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 20px;
  height: 20px;
}

@media screen and (max-width:1199px) {
  .responsive .c1,
  .responsive-booking .c1 {
    max-width: 340px;
  }
}

<div
  className="responsive c0"
>
  <button
    className="c1"
    disabled={false}
    size="large"
  >
    <span
      className="c2"
      size="large"
    >
      <span
        className="c3"
      >
        <svg
          className="icon-inherit-color c4"
          fill={null}
          name="carrot_monochrome"
          rotate=""
          size="normal"
        >
          <use
            xlinkHref="#kb_carrot_monochrome"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Buttons Icon-only button 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c4 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: fill,-webkit-transform;
  -webkit-transition-property: fill,transform;
  transition-property: fill,transform;
  height: 18px;
  width: 18px;
  fill: transparent;
  opacity: 1;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  font-family: inherit;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  display: inline-block;
  color: #ffffff;
  background: #38afff;
  font-size: 20px;
  line-height: 20px;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  border-radius: 6px;
  padding: 11.0px;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: opacity,box-shadow;
  transition-property: opacity,box-shadow;
}

.c1 .icon-inherit-color {
  fill: #ffffff;
}

.c1:hover,
.c1:focus {
  cursor: pointer;
  background: #0f99f5;
  box-shadow: 0 0 0 1px #0f99f5;
  -webkit-transition: none;
  transition: none;
}

.c1:active {
  background: #008ae6;
  box-shadow: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 20px;
  height: 20px;
}

@media screen and (max-width:1199px) {
  .responsive .c1,
  .responsive-booking .c1 {
    max-width: 340px;
  }
}

<div
  className="responsive c0"
>
  <button
    className="c1"
    disabled={false}
    size="large"
  >
    <span
      className="c2"
      size="large"
    >
      <span
        className="c3"
      >
        <svg
          className="icon-inherit-color c4"
          fill={null}
          name="carrot_monochrome"
          rotate=""
          size="normal"
        >
          <use
            xlinkHref="#kb_carrot_monochrome"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Buttons Loading button 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c4 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: fill,-webkit-transform;
  -webkit-transition-property: fill,transform;
  transition-property: fill,transform;
  height: 18px;
  width: 18px;
  fill: transparent;
  opacity: 1;
  -webkit-animation: iNfnVN 3s infinite ease-in-out;
  animation: iNfnVN 3s infinite ease-in-out;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  font-family: inherit;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  display: inline-block;
  color: #ffffff;
  background: #38afff;
  font-size: 20px;
  line-height: 20px;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  border-radius: 6px;
  padding: 11.0px;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: opacity,box-shadow;
  transition-property: opacity,box-shadow;
}

.c1 .icon-inherit-color {
  fill: #ffffff;
}

.c1:hover,
.c1:focus {
  cursor: pointer;
  background: #0f99f5;
  box-shadow: 0 0 0 1px #0f99f5;
  -webkit-transition: none;
  transition: none;
}

.c1:active {
  background: #008ae6;
  box-shadow: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 20px;
  height: 20px;
}

@media screen and (max-width:1199px) {
  .responsive .c1,
  .responsive-booking .c1 {
    max-width: 340px;
  }
}

<div
  className="responsive c0"
>
  <button
    className="c1"
    disabled={false}
    size="large"
  >
    <span
      className="c2"
      size="large"
    >
      <span
        className="c3"
      >
        <svg
          className="icon-inherit-color c4"
          fill={null}
          name="spinner"
          rotate=""
          size="normal"
        >
          <use
            xlinkHref="#kb_spinner"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Buttons With custom icons 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c4 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: fill,-webkit-transform;
  -webkit-transition-property: fill,transform;
  transition-property: fill,transform;
  height: 18px;
  width: 18px;
  fill: transparent;
  opacity: 1;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  font-family: inherit;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  display: inline-block;
  color: #ffffff;
  background: #38afff;
  font-size: 18px;
  line-height: 18px;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  border-radius: 6px;
  padding: 6.0px;
  padding-right: 9.4px;
  padding-left: 9.4px;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: opacity,box-shadow;
  transition-property: opacity,box-shadow;
}

.c1 .icon-inherit-color {
  fill: #ffffff;
}

.c1:hover,
.c1:focus {
  cursor: pointer;
  background: #0f99f5;
  box-shadow: 0 0 0 1px #0f99f5;
  -webkit-transition: none;
  transition: none;
}

.c1:active {
  background: #008ae6;
  box-shadow: none;
}

.c5 {
  display: inline-block;
  vertical-align: top;
  padding: 0 5.6px 0 5.6px;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 18px;
  height: 18px;
}

@media screen and (max-width:1199px) {
  .responsive .c1,
  .responsive-booking .c1 {
    max-width: 340px;
  }
}

<div
  className="responsive c0"
>
  <button
    className="c1"
    disabled={false}
    size="normal"
  >
    <span
      className="c2"
      size="normal"
    >
      <span
        className="c3"
      >
        <svg
          className="icon-inherit-color c4"
          fill={null}
          name="plane"
          rotate=""
          size="normal"
        >
          <use
            xlinkHref="#kb_plane"
          />
        </svg>
      </span>
    </span>
    <span
      className="c5"
      size="normal"
    >
      Авиабилеты
    </span>
    <span
      className="c2"
      size="normal"
    >
      <span
        className="c3"
      >
        <svg
          className="icon-inherit-color c4"
          fill={null}
          name="hand-baggage"
          rotate=""
          size="normal"
        >
          <use
            xlinkHref="#kb_hand-baggage"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Buttons With left and right icons 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c4 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: fill,-webkit-transform;
  -webkit-transition-property: fill,transform;
  transition-property: fill,transform;
  height: 18px;
  width: 18px;
  fill: transparent;
  opacity: 1;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  font-family: inherit;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  display: inline-block;
  color: #ffffff;
  background: #38afff;
  font-size: 18px;
  line-height: 18px;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  border-radius: 6px;
  padding: 6.0px;
  padding-right: 9.4px;
  padding-left: 9.4px;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: opacity,box-shadow;
  transition-property: opacity,box-shadow;
}

.c1 .icon-inherit-color {
  fill: #ffffff;
}

.c1:hover,
.c1:focus {
  cursor: pointer;
  background: #0f99f5;
  box-shadow: 0 0 0 1px #0f99f5;
  -webkit-transition: none;
  transition: none;
}

.c1:active {
  background: #008ae6;
  box-shadow: none;
}

.c5 {
  display: inline-block;
  vertical-align: top;
  padding: 0 5.6px 0 5.6px;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 18px;
  height: 18px;
}

@media screen and (max-width:1199px) {
  .responsive .c1,
  .responsive-booking .c1 {
    max-width: 340px;
  }
}

<div
  className="responsive c0"
>
  <button
    className="c1"
    disabled={false}
    size="normal"
  >
    <span
      className="c2"
      size="normal"
    >
      <span
        className="c3"
      >
        <svg
          className="icon-inherit-color c4"
          fill={null}
          name="hand-baggage"
          rotate=""
          size="normal"
        >
          <use
            xlinkHref="#kb_hand-baggage"
          />
        </svg>
      </span>
    </span>
    <span
      className="c5"
      size="normal"
    >
      Авиабилеты
    </span>
    <span
      className="c2"
      size="normal"
    >
      <span
        className="c3"
      >
        <svg
          className="icon-inherit-color c4"
          fill={null}
          name="plane"
          rotate=""
          size="normal"
        >
          <use
            xlinkHref="#kb_plane"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;
